# etabs-sap-wrapper

./: .gitignore  ARCHITECTURE.md  CSI API ETABS v1.chm  INSTALLATION.md  QUICK_START.md  README.md  main.py  pyproject.toml
examples/: basic_usage.py  sap2000_usage.py
src/etabs_wrapper/: __init__.py  client.py
src/etabs_wrapper/analysis/: __init__.py
src/etabs_wrapper/core/: __init__.py  base_client.py  connection.py  enums.py
src/etabs_wrapper/model/: __init__.py
src/etabs_wrapper/results/: __init__.py  tables.py
