[project]
name = "etabs-wrapper"
version = "0.1.0"
description = "Python wrapper for ETABS API - simplified interface for retrieving table results"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Jane Mikec"}
]
keywords = ["etabs", "structural-engineering", "csi", "api", "wrapper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "comtypes>=1.4.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Repository = "https://gitlab.viktor.ai/jmikec/etabs-wrapper"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PL",  # pylint
    "ARG", # flake8-unused-arguments
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value used in comparison
    "ARG001",  # unused function argument (common in VIKTOR controllers)
    "ARG002",  # unused method argument
    "N999",    # invalid module name (VIKTOR uses specific naming)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]  # Allow magic values in tests
"app/__init__.py" = [
    "F401",  # Allow unused import for entities
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["etabs_wrapper"]
